--- a/package.json
+++ b/package.json
@@ -9,26 +9,32 @@
   "scripts": {
     "start": "node index.js",
     "heroku-postbuild": "cd react && cd client && npm install --only=dev && npm install && npm run build",
-    "test": "test"
+    "test": "node test.js"
+  },
+  "dependencies": {
+    "ejs": "2.5.6",
+    "express": "^4.16.2",
+    "password-generator": "^2.1.0",
+    "firebase": "^4.5.0",
+    "node-fetch": "1.7.3"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nolan4509/RecipeApp.git"
   },
   "author": "Nolan Meeks & Luke Burneson",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/nolan4509/RecipeApp/issues"
   },
   "homepage": "https://github.com/nolan4509/RecipeApp#readme",
-  "dependencies": {
-    "ejs": "2.5.6",
-    "express": "^4.16.2",
-    "password-generator": "^2.1.0"
-  },
   "keywords": [
     "node",
     "express",
     "heroku"
-  ]
+  ],
+  "license": "ISC"
 }
