--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
+    "react": "latest",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-tooltip": "^3.4.0",
+    "react-hover": "^1.3.2",
+    "react-router": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
