--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "2.5.6",
     "express": "^4.16.2",
     "firebase": "^4.8.2",
+    "hoek": "^5.0.4",
     "node-fetch": "1.7.3",
     "password-generator": "^2.1.0"
   },
