--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "react-tooltip": "^3.4.0"
+    "react-tooltip": "^3.4.0",
+    "sshpk": "^1.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
