--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^4.13.1",
     "hoek": "^5.0.4",
     "node-fetch": "1.7.3",
+    "npm": "^6.4.0",
     "password-generator": "^2.1.0"
   },
   "devDependencies": {
