--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "ejs": "2.5.6",
-    "express": "^4.16.2",
-    "firebase": "^4.8.2",
+    "express": "^4.16.3",
+    "express-param": "^1.0.2",
+    "firebase": "^4.13.1",
     "node-fetch": "1.7.3",
     "password-generator": "^2.1.0"
   },
   "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "request": "^2.88.0",
+    "tape": "^4.9.1"
   },
   "repository": {
     "type": "git",
