--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "hoek": "^5.0.4",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.4",
     "react": "latest",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
