--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "2.5.6",
     "express": "^4.16.3",
     "express-param": "^1.0.2",
