--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-hover": "^1.3.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
