--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "hoek": "^5.0.4",
+    "bootstrap": "^4.2.1",
+    "hoek": "^6.1.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "popper.js": "^1.14.6",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
     "react-hover": "^1.3.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-tooltip": "^3.9.0",
-    "reactstrap": "^6.5.0",
-    "sshpk": "^1.15.2",
+    "react-scripts": "2.1.3",
+    "react-tooltip": "^3.9.2",
+    "reactstrap": "^7.0.2",
+    "sshpk": "^1.16.0",
     "url-parse": "^1.4.4"
   },
   "scripts": {
@@ -27,5 +27,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
