--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.1.3",
     "react-tooltip": "^3.9.2",
+    "reactjs-popup": "^1.3.2",
     "reactstrap": "^7.0.2",
     "sshpk": "^1.16.0",
     "url-parse": "^1.4.4"
