--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.11",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
