--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "hoek": "^6.1.2",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
-    "popper.js": "^1.14.7",
-    "react": "^16.8.4",
-    "react-awesome-modal": "^2.0.5",
-    "react-dom": "^16.8.4",
-    "react-firebase-file-uploader": "^2.4.2",
-    "react-hover": "^1.3.4",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.3",
-    "react-tooltip": "^3.10.0",
-    "reactjs-popup": "^1.3.2",
-    "reactstrap": "^7.1.0",
-    "sshpk": "^1.16.1",
-    "url-parse": "^1.4.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:5000",
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "client",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "eslint": "^5.6.0",
+        "hoek": "^6.1.2",
+        "jquery": "^3.3.1",
+        "lodash": "^4.17.11",
+        "popper.js": "^1.14.7",
+        "react": "^16.8.4",
+        "react-awesome-modal": "^2.0.5",
+        "react-dom": "^16.8.4",
+        "react-firebase-file-uploader": "^2.4.2",
+        "react-hover": "^1.3.4",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
+        "react-scripts": "2.1.3",
+        "react-tooltip": "^3.10.0",
+        "reactjs-popup": "^1.3.2",
+        "reactstrap": "^7.1.0",
+        "sshpk": "^1.16.1",
+        "url-parse": "^1.4.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "proxy": "http://localhost:5000",
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
